--- a/swe-spaceinvaders-2013/pom.xml
+++ b/swe-spaceinvaders-2013/pom.xml
@@ -49,5 +49,10 @@
 			<artifactId>mockito-core</artifactId>
 			<version>1.9.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jboss.weld</groupId>
+			<artifactId>weld-se</artifactId>
+			<version>1.0.1-Final</version>
+		</dependency>
 	</dependencies>
 </project>
